--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -46,7 +46,8 @@
 @article{graceoverview,
 	title = {Overview - Monthly Mass Grids},
 	publisher = {NASA},
-	url = {https://grace.jpl.nasa.gov/data/monthly-mass-grids/}
+	url = {https://grace.jpl.nasa.gov/data/monthly-mass-grids/},
+	note = {\url{https://grace.jpl.nasa.gov/data/monthly-mass-grids/}},
 }
 
 @article{allen1998crop,
