--- a/My Job/Writing/extras/abstract.tex
+++ b/My Job/Writing/extras/abstract.tex
@@ -1,1 +1,2 @@
-In recent years, a positive trend of total water storage is detected in many big basins. One of them is Ob river basin in west Siberia. In this thesis, measurements from GRACE and GRACE-FO mission are employed and analyzed to determine the total water storage change in this region. Meanwhile, precipitation and evapotranspiration from global datasets and runoff determined using satellite altimetry will also be taken into discussion. Finally, those questions will be answered: how did the total water storage change from January of 2003 to December of 2019? In which period did these changes happen and what are the reasons behind them?
+In recent years, a positive trend of total water storage is detected in many big basins. One of them is Ob river basin in west Siberia, where 27 million people live in 39 cities. In this thesis, measurements from GRACE and GRACE-FO mission are employed and analyzed to determine the total water storage change in this region since 2003. Meanwhile, precipitation and evapotranspiration from global datasets and runoff determined using satellite altimetry will also be taken into discussion to analyze the reasons of the trend. The data from different resources are summarized using Gauss-Markov adjustment. \\\\
+It was found that from the launch of GRACE till 2013 the total water storage has slightly decreased, from 2013 to 2015 this catchment has gained water due to increased precipitation and low evapotranspiration. After 2016, total water storage in this area has reduced because the precipitation is lower and the evapotranspiration is stronger.
