--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -6,7 +6,7 @@
 	number = {B12},
 	pages = {30205-30229},
 	doi = {10.1029/98JB02844},
-	url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/98JB02844},
+	url = {http://dx.doi.org/10.1029/98JB02844},
 	eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/98JB02844},
 	abstract = {The GRACE satellite mission, scheduled for launch in 2001, is designed to map out the Earth's gravity field to high accuracy every 2–4 weeks over a nominal lifetime of 5 years. Changes in the gravity field are caused by the redistribution of mass within the Earth and on or above its surface. GRACE will thus be able to constrain processes that involve mass redistribution. In this paper we use output from hydrological, oceanographic, and atmospheric models to estimate the variability in the gravity field (i.e., in the geoid) due to those sources. We develop a method for constructing surface mass estimates from the GRACE gravity coefficients. We show the results of simulations, where we use synthetic GRACE gravity data, constructed by combining estimated geophysical signals and simulated GRACE measurement errors, to attempt to recover hydrological and oceanographic signals. We show that GRACE may be able to recover changes in continental water storage and in seafloor pressure, at scales of a few hundred kilometers and larger and at timescales of a few weeks and longer, with accuracies approaching 2 mm in water thickness over land, and 0.1 mbar or better in seafloor pressure.},
 	year = {1998}
@@ -34,7 +34,8 @@
 	pages={132--154},
 	year={1999},
 	publisher={Taylor \& Francis},
-	doi={10.1080/10889370802175895}
+	doi={10.1080/10889370802175895},
+	url = {http://dx.doi.org/10.1080/10889370802175895}
 }
 
 @article{Obriver,
@@ -67,22 +68,21 @@
 }
 
 @article{han1995viscoelastic,
-doi = {10.1111/j.1365-246x.1995.tb01819.x},
-url = {https://doi.org/10.1111%2Fj.1365-246x.1995.tb01819.x},
-year = {1995},
-month = {feb},
-publisher = {Oxford University Press ({OUP})},
-volume = {120},
-number = {2},
-pages = {287--311},
-author = {Dazhong Han and John Wahr},
-title = {The viscoelastic relaxation of a realistically stratified earth, and a further analysis of postglacial rebound},
-journal = {Geophysical Journal International}
+	url = {https://doi.org/10.1111%2Fj.1365-246x.1995.tb01819.x},
+	year = {1995},
+	month = {feb},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {120},
+	number = {2},
+	pages = {287--311},
+	author = {Dazhong Han and John Wahr},
+	title = {The viscoelastic relaxation of a realistically stratified earth, and a further analysis of postglacial rebound},
+	journal = {Geophysical Journal International},
+	doi = {10.1111/j.1365-246x.1995.tb01819.x},
+	url = {http://dx.doi.org/10.1111/j.1365-246x.1995.tb01819.x}
 }
 
 @article{save2016high,
-	doi = {10.1002/2016jb013007},
-	url = {https://doi.org/10.1002%2F2016jb013007},
 	year = {2016},
 	month = {oct},
 	publisher = {American Geophysical Union ({AGU})},
@@ -91,7 +91,9 @@ journal = {Geophysical Journal International}
 	pages = {7547--7569},
 	author = {Himanshu Save and Srinivas Bettadpur and Byron D. Tapley},
 	title = {High-resolution {CSR} {GRACE} {RL}05 mascons},
-	journal = {Journal of Geophysical Research: Solid Earth}
+	journal = {Journal of Geophysical Research: Solid Earth},
+	doi = {10.1002/2016jb013007},
+	url = {https://doi.org/10.1002/2016jb013007}
 }
 
 @article{watkins2015improved,
@@ -103,7 +105,8 @@ journal = {Geophysical Journal International}
 	pages={2648--2671},
 	year={2015},
 	publisher={Wiley Online Library},
-	doi={10.1002/2014jb011547}
+	doi={10.1002/2014jb011547},
+	url = {https://doi.org/10.1002/2014jb011547}
 }
 
 @article{chen2002global,
@@ -114,7 +117,8 @@ journal = {Geophysical Journal International}
 	number={3},
 	pages={249--266},
 	year={2002},
-	doi={10.1175/1525-7541(2002)003<0249:glpaym>2.0.co;2}
+	doi={10.1175/1525-7541(2002)003<0249:glpaym>2.0.co;2},
+	url={https://doi.org/10.1175/1525-7541(2002)003<0249:glpaym>2.0.co;2}
 }
 
 @article{xie2007gauge,
@@ -149,7 +153,8 @@ journal = {Geophysical Journal International}
 	pages={437--472},
 	year={1996},
 	publisher={American Meteorological Society},
-	doi={10.1175/1520-0477(1996)077<0437:TNYRP>2.0.CO;2}
+	doi={10.1175/1520-0477(1996)077<0437:TNYRP>2.0.CO;2},
+	url={https://doi.org/10.1175/1520-0477(1996)077<0437:TNYRP>2.0.CO;2}
 }
 
 @article{hersbach2020era5,
@@ -161,12 +166,13 @@ journal = {Geophysical Journal International}
 	pages={1999--2049},
 	year={2020},
 	publisher={Wiley Online Library},
-	doi={10.1002/qj.3803}
+	doi={10.1002/qj.3803},
+	url={https://doi.org/10.1002/qj.3803}
 }
 
 @article{tourian2013quantile,
 	doi = {10.1002/wrcr.20348},
-	url = {https://doi.org/10.1002%2Fwrcr.20348},
+	url = {https://doi.org/10.1002/wrcr.20348},
 	year = {2013},
 	month = {jul},
 	publisher = {American Geophysical Union ({AGU})},
@@ -184,7 +190,8 @@ journal = {Geophysical Journal International}
 	journal={Pacific Institute for Studies in Dev., Environment \& Security. Stockholm Env. Institute, Oxford Univ. Press. 473p},
 	volume={9},
 	year={1993},
-	doi={10.1890/1051-0761(1998)008[0571:wicpts]2.0.co;2}
+	doi={10.1890/1051-0761(1998)008[0571:wicpts]2.0.co;2},
+	url={https://doi.org/10.1890/1051-0761(1998)008[0571:wicpts]2.0.co;2}
 }
 
 @article{evans1996effects,
@@ -212,7 +219,7 @@ journal = {Geophysical Journal International}
 
 @article{rodell2018emerging,
 	doi = {10.1038/s41586-018-0123-1},
-	url = {https://doi.org/10.1038%2Fs41586-018-0123-1},
+	url = {https://doi.org/10.1038/s41586-018-0123-1},
 	year = {2018},
 	month = {may},
 	publisher = {Springer Science and Business Media {LLC}},
@@ -226,7 +233,7 @@ journal = {Geophysical Journal International}
 
 @article{peel2007updated,
 	doi = {10.5194/hess-11-1633-2007},
-	url = {https://doi.org/10.5194%2Fhess-11-1633-2007},
+	url = {https://doi.org/10.5194/hess-11-1633-2007},
 	year = {2007},
 	month = {oct},
 	publisher = {Copernicus {GmbH}},
@@ -256,7 +263,7 @@ journal = {Geophysical Journal International}
 
 @article{young2020conceptual,
 	doi = {10.1029/2020gl087695},
-	url = {https://doi.org/10.1029%2F2020gl087695},
+	url = {https://doi.org/10.1029/2020gl087695},
 	year = {2020},
 	month = {jun},
 	publisher = {American Geophysical Union ({AGU})},
@@ -276,7 +283,7 @@ journal = {Geophysical Journal International}
 
 @article{tapley2004grace,
 	doi = {10.1126/science.1099192},
-	url = {https://doi.org/10.1126%2Fscience.1099192},
+	url = {https://doi.org/10.1126/science.1099192},
 	year = {2004},
 	month = {jul},
 	publisher = {American Association for the Advancement of Science ({AAAS})},
@@ -290,7 +297,7 @@ journal = {Geophysical Journal International}
 
 @article{frey2009impacts,
 	doi = {10.1002/hyp.7196},
-	url = {https://doi.org/10.1002%2Fhyp.7196},
+	url = {https://doi.org/10.1002/hyp.7196},
 	year = {2009},
 	month = {jan},
 	publisher = {Wiley},
@@ -312,7 +319,7 @@ journal = {Geophysical Journal International}
 
 @article{kidd2001satellite,
 	doi = {10.1002/joc.635},
-	url = {https://doi.org/10.1002%2Fjoc.635},
+	url = {https://doi.org/10.1002/joc.635},
 	year = {2001},
 	publisher = {Wiley},
 	volume = {21},
@@ -325,7 +332,7 @@ journal = {Geophysical Journal International}
 
 @article{sun2018review,
 	doi = {10.1002/2017rg000574},
-	url = {https://doi.org/10.1002%2F2017rg000574},
+	url = {https://doi.org/10.1002/2017rg000574},
 	year = {2018},
 	month = {jan},
 	publisher = {American Geophysical Union ({AGU})},
@@ -345,5 +352,70 @@ journal = {Geophysical Journal International}
 	number={6},
 	pages={2111--2139},
 	year={2014},
-	doi={10.1175/JHM-D-13-0157.1}
+	doi={10.1175/JHM-D-13-0157.1},
+	url = {https://doi.org/10.1175/JHM-D-13-0157.1},
 }
+
+@article{killick2012optimal,
+	title={Optimal detection of changepoints with a linear computational cost},
+	author={Killick, Rebecca and Fearnhead, Paul and Eckley, Idris A},
+	journal={Journal of the American Statistical Association},
+	volume={107},
+	number={500},
+	pages={1590--1598},
+	year={2012},
+	publisher={Taylor \& Francis},
+	doi={10.1080/01621459.2012.737745},
+	url = {https://doi.org/10.1080/01621459.2012.737745},
+}
+
+@article{swenson2008estimating,
+	title={Estimating geocenter variations from a combination of GRACE and ocean model output},
+	author={Swenson, Sean and Chambers, Don and Wahr, John},
+	journal={Journal of Geophysical Research: Solid Earth},
+	volume={113},
+	number={B8},
+	year={2008},
+	publisher={Wiley Online Library},
+	doi={10.1029/2007JB005338},
+	url = {https://doi.org/10.1029/2007JB005338},
+}
+
+@article{cheng2013deceleration,
+	title={Deceleration in the Earth's oblateness},
+	author={Cheng, Minkang and Tapley, Byron D and Ries, John C},
+	journal={Journal of Geophysical Research: Solid Earth},
+	volume={118},
+	number={2},
+	pages={740--747},
+	year={2013},
+	publisher={Wiley Online Library},
+	doi={10.1002/jgrb.50058},
+	url = {https://doi.org/10.1002/jgrb.50058},
+}
+
+@article{swenson2006post,
+	title={Post-processing removal of correlated errors in GRACE data},
+	author={Swenson, Sean and Wahr, John},
+	journal={Geophysical Research Letters},
+	volume={33},
+	number={8},
+	year={2006},
+	publisher={Wiley Online Library},
+	doi={10.1029/2005GL025285},
+	url = {https://doi.org/10.1029/2005GL025285},
+}
+
+@article{vishwakarma2017data,
+	title={A data-driven approach for repairing the hydrological catchment signal damage due to filtering of GRACE products},
+	author={Vishwakarma, Bramha Dutt and Horwath, Martin and Devaraju, Balaji and Groh, Andreas and Sneeuw, Nico},
+	journal={Water Resources Research},
+	volume={53},
+	number={11},
+	pages={9824--9844},
+	year={2017},
+	publisher={Wiley Online Library},
+	doi={10.1002/2017WR021150},
+	url = {https://doi.org/10.1002/2017WR021150},
+}
+
