--- a/My Job/Writing/kapitel/kapitel3.tex
+++ b/My Job/Writing/kapitel/kapitel3.tex
@@ -126,7 +126,7 @@ Runoff can be calculated using terrestrial water balance \autoref{equa:waterbale
 		\centering
 		\includegraphics[width=1\textwidth]{Ob3} % Datei in "bilder/" bei LaTeX: eps, bei PDFLaTeX: jpg (o.ä.) 
 	\end{minipage}
-	\caption{various of data combinations are used to estimate the runoff, there are 3 metrics (PBIAS, correlation and NSE wrt. GRDC) to judge the quality of these combinations for Ob basin, the x-axis are the combinations of different datasets}
+	\caption{various of data combinations are used to estimate the runoff, there are 3 metrics (PBIAS, correlation and NSE wrt. GRDC) to judge the quality of these combinations for Ob basin, the x-axis shows the combinations of different datasets}
 	\label{fig:judgerunoff}
 \end{figure}\\\\
 In addition, the altimetry measurement using satellite is also taken into consideration since the station for in-situ discharge(Salekhard)(\autoref{fig:Salekhard}) is known. 
